[tool.poetry]
name = "particle-ml-project"
version = "0.1.0"
description = ""
authors = ["Vadan Khan <vadankhan1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
jupyterlab = "^4.1.0"
uproot3 = "^3.14.4"
pandas = "^2.2.0"
seaborn = "^0.13.2"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
ipympl = "^0.9.3"
h5py = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true